[package]
edition = "2021"
name = "node"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
backend = {path = "../backend"}
futures = {version = "0.3.21", features = ["thread-pool"]}
rand = "0.8.5"
reqwest = {version = "0.11.9", features = ["json"]}
serde = {version = "1.0.136", features = ["derive"]}
serde_json = "1.0.59"
tokio = {version = "1.17.0", features = ["full"]}
warp = "0.3.2"
